--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300');
+@import url("https://fonts.googleapis.com/css?family=Fira+Sans:300");
 body {
-  font-family: 'Fira Sans',-apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
+  font-family: "Fira Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Helvetica, Arial, sans-serif;
   line-height: 1.6;
   color: #222;
   max-width: 40rem;
@@ -12,14 +13,37 @@ img {
   max-width: 100%;
 }
 a {
-  color: #2ECC40;
+  color: #2e92cc;
 }
-h1, h2, strong {
+h1,
+h2,
+strong {
   color: #111;
 }
-.lessmargintop{
-    margin-top: 0;
+h3 {
+  a {
+    text-decoration: none;
+  }
 }
-.lessmarginbottom{
-    margin-bottom: 0;
+.lessmargintop {
+  margin-top: 0;
+}
+.lessmarginbottom {
+  margin-bottom: 0;
+}
+.externlink {
+  color: #e47b30;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+.externlink:hover {
+  color: #c13e20;
+}
+.internlink {
+  color: #2ecbef;
+  text-decoration: none;
+  transition: all 0.5s;
+}
+.internlink:hover {
+  color: #0087d6;
 }
