--- a/src/css/TimelineViewer.scss
+++ b/src/css/TimelineViewer.scss
@@ -23,7 +23,7 @@
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: white;
+  background-color: var(--color);
   z-index: -1;
 
   top: 55px;
@@ -42,6 +42,7 @@
   padding: 5px 35px 5px 35px;
   height: 4px;
   color: #191919;
+  background-color: var(--color);
 
   transition: all 0.5s ease;
 }
