--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -16,6 +16,9 @@
   --ifm-color-primary-lightest: #4dc6ff;
   --ifm-code-font-size: 95%;
   --ifm-font-size-base: 1rem;
+  --color: #1d1d1d;
+  --bg-color: #fff;
+  --scrollbar-color: rgba(0, 0, 0, 0.15);
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
@@ -27,8 +30,14 @@
   padding: 0 var(--ifm-pre-padding);
 }
 
-html[data-theme="dark"] .docusaurus-highlight-code-line {
-  background-color: rgba(0, 0, 0, 0.3);
+html[data-theme="dark"] {
+  --color: #fff;
+  --bg-color: #1d1d1d;
+  --scrollbar-color: rgba(255, 255, 255, 0.15);
+
+  .docusaurus-highlight-code-line {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
 }
 
 body {
@@ -41,17 +50,13 @@ body {
 body,
 .scroll {
   scrollbar-width: auto;
-  scrollbar-color: rgba(255, 255, 255, 0.15) transparent;
-}
-
-.bo-scroll {
-  scrollbar-color: rgba(0, 0, 0, 0.15) transparent;
+  scrollbar-color: var(--scrollbar-color) transparent;
 }
 
 body::-webkit-scrollbar,
 .scroll::-webkit-scrollbar {
-  width: 5px;
-  height: 8px;
+  width: 7px;
+  height: 7px;
 }
 
 body::-webkit-scrollbar-track,
@@ -61,7 +66,7 @@ body::-webkit-scrollbar-track,
 
 body::-webkit-scrollbar-thumb,
 .scroll::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: var(--scrollbar-color);
   border-radius: 6px;
 }
 
