Update Content distribution app, texts on blog posts

--- a/src/css/TimelineViewer.scss
+++ b/src/css/TimelineViewer.scss
@@ -8,7 +8,8 @@
   width: 100%;
   overflow-x: scroll;
   overflow-y: visible;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+  margin-top: 50px;
   //border: 1px solid transparentize($color: #fff, $amount: 0.75);
 }
 
