--- a/src/css/ContentDistribution.scss
+++ b/src/css/ContentDistribution.scss
@@ -10,15 +10,13 @@
   //color: white;
 
   transition: all 0.5s ease;
+  margin-bottom: 100px;
 }
 
 .app-header {
-  width: 720px;
+  position: absolute;
+  top: 60px;
   margin-bottom: 16px;
-
-  img {
-    margin-bottom: 20px;
-  }
 
   p {
     font-size: 14px;
