Add ContentDistribution blog post

--- a/src/css/ContentDistribution.scss
+++ b/src/css/ContentDistribution.scss
@@ -200,6 +200,13 @@ $light-blue: #3da4cc;
         }
       }
 
+      .weight {
+        width: 100px;
+        input {
+          width: 80px;
+        }
+      }
+
       .remove {
         width: 75px;
         button {
