Add portfolio page, Video component, remove docs, many small fixes here and there

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -109,3 +109,13 @@ body::-webkit-scrollbar-thumb,
     font-size: 18px;
   }
 }
+
+.gallery {
+  display: flex;
+}
+
+.legend {
+  font-size: small;
+  text-align: center;
+  margin-top: -20px;
+}
