--- a/src/css/Rules.scss
+++ b/src/css/Rules.scss
@@ -179,7 +179,8 @@ $red: #ff4136;
   }
 
   .network-container {
-    width: 600px;
+    width: 100%;
+    max-width: 600px;
     height: 400px;
     border: 1px solid lightgray;
   }
