Fix styling of front-page

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -102,8 +102,8 @@ body::-webkit-scrollbar-thumb,
 
 .prose {
   max-width: 75ch;
-  margin: auto;
-  margin-top: 100px;
+  margin: 50px 0;
+  padding: 0 15px;
 
   p {
     font-size: 18px;
