--- a/src/css/Dolly.scss
+++ b/src/css/Dolly.scss
@@ -2,8 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   canvas {
     max-width: 500px;
+  }
+
+  iframe {
+    max-width: 500px;
+    overflow: visible;
+    width: 100%;
   }
 
   .input-container {
